# babelEpitech

./: README.md
client/: Babibel.pro
client/include/: Enum.h
client/include/audio/: AbsAudio.hpp  AudioManager.hpp  EncodeManager.hpp  audiosettings.h  opus.h
client/include/controller/: AClientTCP.h  AClientUDP.h  Network.hpp  QClientTCP.h  QClientUDP.h  controller.h
client/include/model/: contact.h  core.h
client/include/view/: ConcactListItem.h  IMainWindow.h  MyApplication.h  babibelwindow.h  conversation.h  login.h
client/portaudio_mombul/BabelTest/: BabelTest.opensdf  BabelTest.sln
client/portaudio_mombul/BabelTest/BabelTest/: AbsAudio.hpp  AbsEncode.hpp  AudioManager.cpp  BabelTest.vcxproj  BabelTest.vcxproj.filters  EncodeManager.cpp  Makefile  babibel  main.cpp
client/portaudio_mombul/BabelTest/BabelTest/Debug/: BabelTest.lastbuildstate  BabelTest.write.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
client/portaudio_mombul/BabelTest/Debug/: BabelTest.exp  BabelTest.ilk  BabelTest.lib
client/ressources/: images.qrc
client/src/: main.cpp
client/src/audio/: AudioManager.cpp  EncodeManager.cpp
client/src/controller/: AClientTCP.cpp  AClientUDP.cpp  Network.cpp  QClientTCP.cpp  QClientUDP.cpp  controller.cpp
client/src/model/: contact.cpp  core.cpp
client/src/view/: babibelwindow.cpp  conversation.cpp  login.cpp
client/ui/: babibelwindow.ui  conversation.ui  login.ui
headers-shared/linux/: CUMutex.h
headers-shared/shared/: CircularBuffer.hpp  LibC.hh  Mutex.h  MutexPool.h  Packet.h  PacketFactory.h  Util.hpp
headers-shared/windows/: CWMutex.h
server/: CMakeLists.txt
server/headers/shared/: Account.hh  Client.hh  IManagerUser.hh  INetwork.hh  ISerialize.h  ManagerAccount.hh  Network.hh  SerializeAccountBoost.hpp  SerializeOneAccountBoost.hpp  Server.hh  TCPBoost.hpp  TCPBoostClient.hpp
server/sources/: main.cpp
server/sources/shared/: Account.cpp  Client.cpp  ManagerAccount.cpp  Network.cpp  Server.cpp
sources-shared/linux/: CUMutex.cpp
sources-shared/shared/: CircularBuffer.cpp  Exception.cpp  LibC.cpp  Mutex.cpp  MutexPool.cpp  Packet.cpp  PacketFactory.cpp
sources-shared/windows/: CWMutex.cpp
